@startuml

title __STEP2's Class Diagram__\n

  package step2 {
    class DecoyDuck {
        + display()
    }
  }
  

  package step2 {
    class Duck {
        + swim()
        + display()
    }
  }
  

  package step2 {
    interface Flyable {
        {abstract} + fly()
    }
  }
  

  package step2 {
    class Main {
        {static} + main()
    }
  }
  

  package step2 {
    class MallardDuck {
        + display()
        + fly()
        + quack()
    }
  }
  

  package step2 {
    interface Quackable {
        {abstract} + quack()
    }
  }
  

  package step2 {
    class RedHeadDuck {
        + display()
        + fly()
        + quack()
    }
  }
  

  package step2 {
    class RubberDuck {
        + display()
        + quack()
    }
  }
  

  DecoyDuck -up-|> Duck
  MallardDuck -up-|> Flyable
  MallardDuck -up-|> Quackable
  MallardDuck -up-|> Duck
  RedHeadDuck -up-|> Flyable
  RedHeadDuck -up-|> Quackable
  RedHeadDuck -up-|> Duck
  RubberDuck -up-|> Quackable
  RubberDuck -up-|> Duck


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
